--- a/citely-web/src/main/webapp/WEB-INF/templates/index.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html  xmlns:th="http://www.thymeleaf.org">
+<html xmlns:th="http://www.thymeleaf.org"
+      xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+      layout:decorator="layout">
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Citely</title>
@@ -8,7 +10,7 @@
           href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 </head>
 <body>
-<div class="container">
+<div layout:fragment="content">
     <h2 th:text="#{citely.title}">HELLO WORLD</h2>
 </div>
 
