--- a/citely-web/src/main/webapp/WEB-INF/templates/layout.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/layout.html
@@ -4,12 +4,14 @@
 <head lang="en">
     <meta charset="UTF-8"/>
     <title>Citely</title>
+    <link th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}"
+          href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 </head>
 <body>
-<!--/* Standard layout can be mixed with Layout Dialect */-->
-<!--<div th:replace="fragments/header :: header">
-    ...
-</div>-->
+
+<div th:replace="header :: header-nav">
+</div>
+
 <div class="container">
     <div layout:fragment="content">
         <!-- ============================================================================ -->
@@ -28,5 +30,10 @@
     </div>
     </div>
   <!--  <div th:replace="fragments/footer :: footer">&copy; 2014 The Static Templates</div> -->
+
+<script th:src="@{/webjars/jquery/2.1.3/jquery.js}"
+        src="http://cdn.jsdelivr.net/webjars/jquery/2.1.3/jquery.js"></script>
+<script th:src="@{/webjars/bootstrap/3.3.2/js/bootstrap.js}"
+        src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/js/bootstrap.min.js"></script>
 </body>
 </html>
