--- a/citely-web/src/main/webapp/WEB-INF/templates/header.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/header.html
@@ -3,7 +3,7 @@
        xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title></title>
+    <title th:text="#{citely.title}">Citely</title>
     <link th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}"
           href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 </head>
