--- a/citely-web/src/main/webapp/WEB-INF/templates/home.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/home.html
@@ -4,7 +4,7 @@
       layout:decorator="layout">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>Citely</title>
+    <title th:text="#{citely.title}">Citely</title>
 
     <link th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}"
           href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
