--- a/citely-web/src/main/webapp/WEB-INF/templates/references.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/references.html
@@ -4,14 +4,14 @@
       layout:decorator="layout">
 <head lang="en">
     <meta charset="UTF-8"/>
-    <title>Citely</title>
+    <title th:text="#{citely.title}">Citely</title>
 
     <link th:href="@{/webjars/bootstrap/3.3.2/css/bootstrap.min.css}"
           href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 </head>
 <body>
 <div layout:fragment="content">
-    <h2 th:text="#{citely.title}">HELLO WORLD</h2>
+    <h2 th:text="#{citely.references.overview}">References are fantastic.</h2>
 </div>
 
 <script th:src="@{/webjars/jquery/2.1.3/jquery.js}"
