Make the Home page title less "hello world"

--- a/citely-web/src/main/webapp/WEB-INF/templates/home.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/home.html
@@ -11,7 +11,7 @@
 </head>
 <body>
 <div layout:fragment="content">
-    <h2 th:text="#{citely.title}">HELLO WORLD</h2>
+    <h2 th:text="#{citely.home.overview}">This is Citely's home page.</h2>
 </div>
 
 <script th:src="@{/webjars/jquery/2.1.3/jquery.js}"
