--- a/citely-web/src/main/webapp/WEB-INF/templates/header.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/header.html
@@ -8,11 +8,11 @@
           href="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/css/bootstrap.min.css" rel="stylesheet" media="screen"/>
 </head>
 <body>
-<nav class="navbar navbar-default" th:fragment="header-nav">
+<nav class="navbar navbar-default" th:fragment="header-nav" id="header-nav">
     <div class="container-fluid">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
-            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-content">
+            <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-content" aria-expanded="false">
                 <span class="sr-only">Toggle navigation</span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
@@ -24,7 +24,7 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-content">
             <ul class="nav navbar-nav">
-                <li class="active"><a href="#" th:href="@{/projects}">Projects<span class="sr-only">(current)</span></a></li>
+                <li><a href="#" th:href="@{/projects}">Projects</a></li>
                 <li><a href="#" th:href="@{/tags}">Tags</a></li>
                 <li><a href="#" th:href="@{/references}">References</a></li>
             </ul>
