--- a/citely-web/src/main/webapp/WEB-INF/templates/layout.html
+++ b/citely-web/src/main/webapp/WEB-INF/templates/layout.html
@@ -35,5 +35,7 @@
         src="http://cdn.jsdelivr.net/webjars/jquery/2.1.3/jquery.js"></script>
 <script th:src="@{/webjars/bootstrap/3.3.2/js/bootstrap.js}"
         src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.2/js/bootstrap.min.js"></script>
+<script th:src="@{/resources/js/header.js}"
+        src="resources/js/header.js"></script>
 </body>
 </html>
