Migrate to SpringBoot runnable JAR
Switch from a WAR artifact to a JAR artifact that is a SpringBoot app
with embedded Jetty.  Change the way resource handlers are added and
Thymeleaf is configured, to find resources after having been moved to
worn with SpringBoot.nnChange templates to reference static assets
differently according to the new paths.

--- a/citely-web/src/main/resources/templates/layout.html
+++ b/citely-web/src/main/resources/templates/layout.html
@@ -35,7 +35,7 @@
         src="http://cdn.jsdelivr.net/webjars/jquery/3.2.1/jquery.js"></script>
 <script th:src="@{/webjars/bootstrap/3.3.7/js/bootstrap.js}"
         src="http://cdn.jsdelivr.net/webjars/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-<script th:src="@{/resources/js/header.js}"
-        src="resources/js/header.js"></script>
+<script th:src="@{/js/header.js}"
+        src="../static/js/header.js"></script>
 </body>
 </html>
