--- a/citely-web/src/main/resources/templates/header.html
+++ b/citely-web/src/main/resources/templates/header.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html  xmlns:th="http://www.thymeleaf.org"
-       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout">
+       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
+       xmlns:sec="http://www.thymeleaf.org/extras/spring-security">
 <head lang="en">
     <meta charset="UTF-8"/>
     <title th:text="#{citely.title}">Citely</title>
@@ -28,6 +29,7 @@
                 <li><a href="#" th:href="@{/tags}">Tags</a></li>
                 <li><a href="#" th:href="@{/references}">References</a></li>
             </ul>
+            <p class="navbar-text navbar-right">Logged in as <span sec:authentication="name">Bob</span></p>
             <form class="navbar-form navbar-right" role="search">
                 <div class="form-group">
                     <input type="text" class="form-control" placeholder="Search"/>
