--- a/citely-web/src/main/resources/templates/layout.html
+++ b/citely-web/src/main/resources/templates/layout.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 
-<div th:replace="header :: header-nav">
+<div th:replace="~{header :: header-nav}">
 </div>
 
 <div class="container">
