--- a/citely-web/src/main/resources/templates/references.html
+++ b/citely-web/src/main/resources/templates/references.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org"
       xmlns:layout="http://www.ultraq.net.nz/thymeleaf/layout"
-      layout:decorator="layout">
+      layout:decorate="~{layout}">
 <head lang="en">
     <meta charset="UTF-8"/>
     <title th:text="#{citely.title}">Citely</title>
